fix deprecated